--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -66,7 +66,7 @@
 
     <h2>Contact</h2>
     <p>If you have any questions about this privacy policy, please contact us at:</p>
-    <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    <p>Email: <a href="mailto:ahmedoogle11@gmail.com">your-email@example.com</a></p>
 
     <hr>
     <p style="text-align: center; color: #999; font-size: 14px;">
